--- a/Day1/OOP_Demo.ipynb
+++ b/Day1/OOP_Demo.ipynb
@@ -70,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "class ClassName: # note the PascalCase (everything else is snake_case)\n",
     "    def __init__(self, x, y): # this is the constructor\n",
@@ -95,9 +103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peeling banana\n",
+      "Added banana to blender\n",
+      "Washing strawberry\n",
+      "De-leafing strawberry\n",
+      "Added strawberry to blender\n",
+      "Washing strawberry\n",
+      "De-leafing strawberry\n",
+      "Added another strawberry to blender\n",
+      "Plugging blender in\n",
+      "Blending contents\n",
+      "Made smoothie out of: ['banana', 'strawberry', 'strawberry']\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    contents_of_blender = []\n",
@@ -229,9 +255,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slightly private!\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'MyClass' object has no attribute '__y'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m my_instance \u001b[38;5;241m=\u001b[39m MyClass()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_instance\u001b[38;5;241m.\u001b[39m_x) \u001b[38;5;66;03m# prints \"slightly private\"\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_instance\u001b[38;5;241m.\u001b[39m__y)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'MyClass' object has no attribute '__y'"
+     ]
+    }
+   ],
    "source": [
     "class MyClass:\n",
     "    def __init__(self):\n",
@@ -241,7 +286,7 @@
     "my_instance = MyClass()\n",
     "print(my_instance._x) # prints \"slightly private\"\n",
     "print(my_instance.__y) # raises AttributeError: 'MyClass' object has no attribute '__y'\n",
-    "#print(my_instance._MyClass__y) # technically prints \"very private!\", but this really shouldn't be done"
+    "# print(my_instance._MyClass__y) # technically prints \"very private!\", but this really shouldn't be done"
    ]
   },
   {
@@ -538,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
