--- a/Day1/OOP_Demo_Solutions.ipynb
+++ b/Day1/OOP_Demo_Solutions.ipynb
@@ -153,9 +153,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peeling banana\n",
+      "Adding banana to blender\n",
+      "Washing strawberry\n",
+      "De-leafing strawberry\n",
+      "Adding strawberry to blender\n",
+      "Blending contents\n",
+      "Plugging in blender\n",
+      "Blended smoothie: A smoothie made of banana, strawberry\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 2: Abstraction \n",
     "\n",
@@ -466,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
