--- a/Day1/OOP_Exercise_Solutions.ipynb
+++ b/Day1/OOP_Exercise_Solutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: Which pillar of OOP creates hierarchy and allows code reuse?\n",
+      "All tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Example Usage:\n",
     "\n",
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +100,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flashcards in the deck:\n",
+      "Question: Which pillar of OOP allows objects to be used interchangeably?\n",
+      "Question: Which pillar of OOP involves hiding the internal state of objects?\n",
+      "1. Abstraction\n",
+      "2. Encapsulation\n",
+      "3. Inheritance\n",
+      "4. Polymorphism\n",
+      "\n",
+      "Random flashcard:\n",
+      "Question: Which pillar of OOP involves hiding the internal state of objects?\n",
+      "1. Abstraction\n",
+      "2. Encapsulation\n",
+      "3. Inheritance\n",
+      "4. Polymorphism\n",
+      "All tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Example Usage for Deck class:\n",
     "\n",
@@ -129,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +191,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: Which pillar of OOP involves hiding the internal state of objects?\n",
+      "1. Abstraction\n",
+      "2. Encapsulation\n",
+      "3. Inheritance\n",
+      "4. Polymorphism\n",
+      "Incorrect! The correct answer was: Encapsulation\n",
+      "Question: Which pillar of OOP involves hiding the internal state of objects?\n",
+      "1. Abstraction\n",
+      "2. Encapsulation\n",
+      "3. Inheritance\n",
+      "4. Polymorphism\n",
+      "Correct!\n",
+      "Your final score is: 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Example Usage for QuizSession class:\n",
     "\n",
@@ -185,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,9 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score history:\n",
+      "2024-06-03 19:07:07.900459: 5\n",
+      "2024-06-03 19:07:07.900483: 8\n",
+      "All tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Example Usage for ScoreTracker class:\n",
     "\n",
@@ -275,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
