--- a/Day2/IntroductionToDataOrganization.ipynb
+++ b/Day2/IntroductionToDataOrganization.ipynb
@@ -15,7 +15,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%matplotlib notebook"
+    "# %matplotlib notebook"
    ]
   },
   {
@@ -185,7 +185,7 @@
     }
    },
    "source": [
-    "*Write your answer here*"
+    "388269"
    ]
   },
   {
@@ -213,7 +213,7 @@
     }
    },
    "source": [
-    "*Write your answer here*"
+    "86880"
    ]
   },
   {
@@ -241,7 +241,7 @@
     }
    },
    "source": [
-    "*Write your answer here*"
+    "The director ID matched to movie ID. 371180"
    ]
   },
   {
@@ -704,14 +704,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "c075c4bc",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 15 (3764460945.py, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 17\u001b[0;36m\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 15\n"
+     ]
+    }
+   ],
    "source": [
     "def sortlist(unsort):\n",
     "    '''Sort the unsorted list unsort\n",
@@ -1079,7 +1088,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.7"
   },
   "livereveal": {
    "height": 768,
