--- a/Day2/MongoDB/MongoDB.ipynb
+++ b/Day2/MongoDB/MongoDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d3197b78",
    "metadata": {
     "slideshow": {
@@ -21,10 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3bf2fa0d-59e3-4b5c-9f2e-4d88be939ed3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done!\n"
+     ]
+    }
+   ],
    "source": [
     "df1 = pandas.read_csv(\"IMDB-movies.csv\")\n",
     "df2 = pandas.read_csv(\"IMDB-directors.csv\")\n",
@@ -168,10 +176,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cb0c86c5-2b33-4cfb-8991-feac16bc36e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>index</th>\n",
+       "      <th>director_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>665f83e93eea3e6d1b53095d</td>\n",
+       "      <td>70115</td>\n",
+       "      <td>71645</td>\n",
+       "      <td>Martin</td>\n",
+       "      <td>Scorsese</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        _id  index  director_id first_name last_name\n",
+       "0  665f83e93eea3e6d1b53095d  70115        71645     Martin  Scorsese"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pandas.DataFrame(list(db.imdb_directors.find({\"last_name\" : \"Scorsese\"})))"
    ]
@@ -192,19 +251,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "135a2600-8d4e-40fb-ba93-7bf2aa23c5de",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('665f83e63eea3e6d1b4c8c30'),\n",
+       "  'index': 0,\n",
+       "  'movie_id': 0,\n",
+       "  'name': '#28',\n",
+       "  'year': 2002,\n",
+       "  'rank': 0.0},\n",
+       " {'_id': ObjectId('665f83e63eea3e6d1b4c8c31'),\n",
+       "  'index': 1,\n",
+       "  'movie_id': 1,\n",
+       "  'name': '#7 Train: An Immigrant Journey, The',\n",
+       "  'year': 2000,\n",
+       "  'rank': 0.0},\n",
+       " {'_id': ObjectId('665f83e63eea3e6d1b4c8c32'),\n",
+       "  'index': 2,\n",
+       "  'movie_id': 2,\n",
+       "  'name': '$',\n",
+       "  'year': 1971,\n",
+       "  'rank': 6.4},\n",
+       " {'_id': ObjectId('665f83e63eea3e6d1b4c8c33'),\n",
+       "  'index': 3,\n",
+       "  'movie_id': 3,\n",
+       "  'name': '$1,000 Reward',\n",
+       "  'year': 1913,\n",
+       "  'rank': 0.0},\n",
+       " {'_id': ObjectId('665f83e63eea3e6d1b4c8c34'),\n",
+       "  'index': 4,\n",
+       "  'movie_id': 4,\n",
+       "  'name': '$1,000 Reward',\n",
+       "  'year': 1915,\n",
+       "  'rank': 0.0},\n",
+       " {'_id': ObjectId('665f83e63eea3e6d1b4c8c35'),\n",
+       "  'index': 5,\n",
+       "  'movie_id': 5,\n",
+       "  'name': '$1,000 Reward',\n",
+       "  'year': 1923,\n",
+       "  'rank': 0.0},\n",
+       " {'_id': ObjectId('665f83e63eea3e6d1b4c8c36'),\n",
+       "  'index': 6,\n",
+       "  'movie_id': 6,\n",
+       "  'name': '$1,000,000 Duck',\n",
+       "  'year': 1971,\n",
+       "  'rank': 5.0},\n",
+       " {'_id': ObjectId('665f83e63eea3e6d1b4c8c37'),\n",
+       "  'index': 7,\n",
+       "  'movie_id': 7,\n",
+       "  'name': '$1,000,000 Reward, The',\n",
+       "  'year': 1920,\n",
+       "  'rank': 0.0},\n",
+       " {'_id': ObjectId('665f83e63eea3e6d1b4c8c38'),\n",
+       "  'index': 8,\n",
+       "  'movie_id': 8,\n",
+       "  'name': '$10,000 Under a Pillow',\n",
+       "  'year': 1921,\n",
+       "  'rank': 0.0},\n",
+       " {'_id': ObjectId('665f83e63eea3e6d1b4c8c39'),\n",
+       "  'index': 9,\n",
+       "  'movie_id': 9,\n",
+       "  'name': '$100,000.00',\n",
+       "  'year': 1915,\n",
+       "  'rank': 0.0}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in collection1.find().limit(10)]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9e27e331-8aa1-4642-bd1b-4d330fa5ed9a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'first_name': 'A.'},\n",
+       " {'first_name': 'A.'},\n",
+       " {'first_name': 'A.'},\n",
+       " {'first_name': 'A.'},\n",
+       " {'first_name': 'A.'},\n",
+       " {'first_name': 'A.'},\n",
+       " {'first_name': 'A.'},\n",
+       " {'first_name': 'A.'},\n",
+       " {'first_name': 'A.'},\n",
+       " {'first_name': 'A.'}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in collection2.find({}, {'first_name': 1, '_id': 0}).sort('first_name', 1).limit(10)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,19 +375,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d5333751-e6d6-4267-8892-ccba463ffa8a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "355146"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection1.count_documents({})"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2af0e751-de93-404d-ab7e-6fe8b133601e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86880"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection2.count_documents({})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,11 +443,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0df316bb-1990-4516-9f75-e87d107edabe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39586"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection1.count_documents({'year': {\"$gt\": 2000}})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,11 +490,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e4763794-2e16-496a-8b43-90b25145bd86",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Action',\n",
+       " 'Adult',\n",
+       " 'Adventure',\n",
+       " 'Animation',\n",
+       " 'Comedy',\n",
+       " 'Crime',\n",
+       " 'Documentary',\n",
+       " 'Drama',\n",
+       " 'Family',\n",
+       " 'Fantasy',\n",
+       " 'Film-Noir',\n",
+       " 'Horror',\n",
+       " 'Music',\n",
+       " 'Musical',\n",
+       " 'Mystery',\n",
+       " 'Romance',\n",
+       " 'Sci-Fi',\n",
+       " 'Short',\n",
+       " 'Thriller',\n",
+       " 'War',\n",
+       " 'Western']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection4.distinct('genre')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -356,11 +581,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ce06d8bc-1eae-4a97-bb02-03a2de9de563",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': 2002, 'count': 10337},\n",
+       " {'_id': 2003, 'count': 10119},\n",
+       " {'_id': 2000, 'count': 10107},\n",
+       " {'_id': 2001, 'count': 10002},\n",
+       " {'_id': 1999, 'count': 9389},\n",
+       " {'_id': 1998, 'count': 8636},\n",
+       " {'_id': 1997, 'count': 7748},\n",
+       " {'_id': 2004, 'count': 7558},\n",
+       " {'_id': 1996, 'count': 7275},\n",
+       " {'_id': 1995, 'count': 6923}]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_name = 'year'  # Replace with your column name\n",
+    "\n",
+    "# Step 4: Use aggregation to find the most common value\n",
+    "pipeline = [\n",
+    "    {\"$group\": {\"_id\": f\"${column_name}\", \"count\": {\"$sum\": 1}}},\n",
+    "    {\"$sort\": {\"count\": -1}},\n",
+    "    {\"$limit\": 10}\n",
+    "]\n",
+    "\n",
+    "list(collection1.aggregate(pipeline))"
+   ]
   },
   {
    "cell_type": "markdown",
